HOTFIX: Fix timeline line break on intermediate screens

--- a/app/assets/stylesheets/components/timeline.scss
+++ b/app/assets/stylesheets/components/timeline.scss
@@ -107,6 +107,7 @@
     font-size: $size-large;
     margin: 0;
     line-height: $size-xlarge;
+    text-align: center;
   }
 }
 
